added method appendTextToPane in calculator. wip